kubernetes/apps/searxng/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      enableServiceLinks: false

      containers:
        - name: searxng
          image: searxng/searxng:latest@sha256:5286edb35782454ab8a102c5eff6b54bff745853191b46aeead95f225aa6dfb6
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 977
            runAsGroup: 977
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: searxng-config-dir
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

      volumes:
        - name: tmp
          emptyDir: {}
        - name: searxng-config-dir
          emptyDir: {}
        - name: searxng-config-readonly
          configMap:
            name: searxng-config
