kubernetes/apps/searxng/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app: searxng
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
